# picasso

./: .gitignore  .gitmodules  CMakeLists.txt  DESCRIPTION  LICENSE  MD5  Makefile  NAMESPACE  README.md  _config.yml  index.html  index.md  params.json  picasso.sublime-workspace
R/: gaussian_solver.R  lasso.sc.cov.R  lasso.sc.naive.R  logit.R  logit_solver.R  picasso.R  picasso.gaussian.R  picasso.lasso.R  picasso.logit.R  picasso.poisson.R  picasso.scio.R  picasso.sqrtlasso.R  poisson_solver.R  scio.generator.R  scio.plot.R  scio.sc.R
R-package/: .Rbuildignore  .Rinstignore  DESCRIPTION  NAMESPACE
R-package/R/: gaussian_solver.R  logit_solver.R  picasso.R  picasso.gaussian.R  picasso.logit.R  picasso.poisson.R  picasso.sqrtlasso.R  poisson_solver.R  sqrtlasso_solver.R
R-package/data/: datalist  eyedata.rda
R-package/man/: coef.gaussian.Rd  coef.logit.Rd  coef.poisson.Rd  coef.sqrtlasso.Rd  eyedata.Rd  picasso-package.Rd  picasso.Rd  plot.logit.Rd  (+11 more)
amalgamation/: picasso-all0.cc  picasso-all0.cpp
data/: datalist
doc/: README.html
docs/: .buildinfo  README.html  genindex.html  index.html  objects.inv  py-modindex.html  pycasso.html  search.html  searchindex.js
make/: config.mk
man/: coef.gaussian.Rd  coef.lasso.Rd  coef.logit.Rd  coef.poisson.Rd  picasso-package.Rd  picasso.Rd  plot.gaussian.Rd  plot.lasso.Rd  plot.logit.Rd  plot.poisson.Rd  plot.scio.Rd  plot.sim.Rd  predict.gaussian.Rd  predict.lasso.Rd  predict.logit.Rd  predict.poisson.Rd  predict.sqrtlasso.Rd  print.lasso.Rd  print.logit.Rd  print.poisson.Rd  print.scio.Rd  print.sim.Rd  print.sqrtlasso.Rd  scio.generator.Rd  scio.plot.Rd
profiling/: benchmark.R  benchmark.py  test_picasso.R
python-package/: MANIFEST.in  README.rst  setup-pip.py  setup.py
src/: IRLS_solver.c  IRLS_solver.h  Makevars  Makevars.win  SFGen.c  euc_proj.c  init.c  lambda_max.c  mathlib.h  mathutils.c  mathutils.h  mymath.h  mymath1.c  picasso-init.c  picasso_gaussian.c  picasso_gaussian_cov.c  picasso_gaussian_naive.c  picasso_lasso_sc_cov.c  picasso_lasso_sc_naive.c  picasso_logit.c  picasso_logit_cyclic.c  picasso_logit_greedy.c  picasso_logit_prox.c  picasso_logit_stoc.c  picasso_poisson.c  picasso_scio_sc.c  picasso_sqrt_lasso.c  standardize_design.c  symbols.rds
tests/: benchmark.R  test_picasso.R
tutorials/: tutorial.R  tutorial.py
vignettes/: vignette.Rnw
(+53 files in other folders)
